--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Leandro González</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/images/lea.png">
+  <link rel="icon" type="image/x-icon" href="assets/image/lea.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Fonte del Proyecto Raleway -->
